refactor to organize code better, update sqlite library for xplat usage.
